deployment/classifier-service.yaml
apiVersion: v1
kind: Service
metadata:
    name: gpt-service
spec:
    selector:
        app.kubernetes.io/name: gpt
    type: NodePort
    ports:
        - protocol: TCP
          port: 80
          targetPort: 9000
